@@ -306,6 +306,7 @@ MagickExport Quantum GenerateNoise(const Quantum quantum_pixel,
 MagickExport int GetOptimalKernelWidth1D(const double radius,const double sigma)
 {
   double
+    epsilon,
     normalize,
     value;
 
@@ -317,6 +318,9 @@ MagickExport int GetOptimalKernelWidth1D(const double radius,const double sigma)
 
   if (radius > 0.0)
     return((int) (2.0*ceil(radius)+1.0));
+  epsilon=1.0/MaxRGBDouble;
+  if (epsilon < MagickEpsilon)
+    epsilon=MagickEpsilon;
   for (width=5; ;)
   {
     normalize=0.0;
@@ -324,7 +328,7 @@ MagickExport int GetOptimalKernelWidth1D(const double radius,const double sigma)
       normalize+=exp(-((double) u*u)/(2.0*sigma*sigma))/(MagickSQ2PI*sigma);
     u=width/2;
     value=exp(-((double) u*u)/(2.0*sigma*sigma))/(MagickSQ2PI*sigma)/normalize;
-    if ((long) (MaxRGB*value) <= 0)
+    if (value < epsilon)
       break;
     width+=2;
   }
@@ -335,6 +339,7 @@ MagickExport int GetOptimalKernelWidth2D(const double radius,const double sigma)
 {
   double
     alpha,
+    epsilon,
     normalize,
     value;
 
@@ -347,6 +352,9 @@ MagickExport int GetOptimalKernelWidth2D(const double radius,const double sigma)
 
   if (radius > 0.0)
     return((int) (2.0*ceil(radius)+1.0));
+  epsilon=1.0/MaxRGBDouble;
+  if (epsilon < MagickEpsilon)
+    epsilon=MagickEpsilon;
   for (width=5; ;)
   {
     normalize=0.0;
@@ -360,7 +368,7 @@ MagickExport int GetOptimalKernelWidth2D(const double radius,const double sigma)
     }
     v=width/2;
     value=exp(-((double) v*v)/(2.0*sigma*sigma))/(MagickSQ2PI*sigma)/normalize;
-    if ((long) (MaxRGB*value) <= 0)
+    if (value < epsilon)
       break;
     width+=2;
   }
