@@ -21,6 +21,19 @@
 </tr>
 </table>
 <p>
+2009-11-30  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> magick/enhance.c (GammaImage): Should return success status
+        rather than an error status when there is no work to do.
+
+  <LI> magick/gem.c (GetOptimalKernelWidth1D, GetOptimalKernelWidth1D):
+        In the Q32 build, convolution kernel size was estimated
+        incorrectly for large sigmas on 32-bit systems due to arithmetic
+        overflow.
+
+</UL>
+<p>
 2009-11-21  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
