@@ -1,3 +1,13 @@
+2009-11-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* magick/enhance.c (GammaImage): Should return success status
+	rather than an error status when there is no work to do.
+
+	* magick/gem.c (GetOptimalKernelWidth1D, GetOptimalKernelWidth1D):
+	In the Q32 build, convolution kernel size was estimated
+	incorrectly for large sigmas on 32-bit systems due to arithmetic
+	overflow.
+
 2009-11-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* configure: Update to Autoconf 2.65.
